--- a/templates/register.html
+++ b/templates/register.html
@@ -4,38 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedido de Camisas</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
     <div class="container">
         <h1>Vita Fit</h1>
         <h2>Fisico Center</h2>
         <h3>UMA ACADEMIA PARA TODOS</h3>
-        <br>
-        <br>
-        <br>
         <h2>Pedido de Camisas Vita Fit</h2>
-        <form id="pedidoForm">
+        <form action="../php/register_order.php" method="POST">
             <div class="row">
                 <label for="nome">NOME:</label>
                 <input type="text" id="nome" name="nome" required>
             </div>
             <div class="row">
                 <label for="telefone">TELEFONE:</label>
-                <input type="tel" id="telefone" name="telefone" required>
+                <input type="text" id="telefone" name="telefone" required>
+            </div>
+            <div class="row">
+                <label for="email">EMAIL:</label>
+                <input type="email" id="email" name="email" required>
             </div>
             <div class="row">
                 <label for="quantidade">Quantidade:</label>
                 <input type="number" id="quantidade" name="quantidade" min="1" max="10" step="1" value="1" required>
             </div>
-            
-            <div id="opcoesCamisas"></div>
-            
+            <div id="camisas-container"></div>
             <div class="row">
-                <button type="submit">Finalizar Pedido</button>
+                <button type="submit">Enviar Pedido</button>
             </div>
         </form>
-    </div>    
-    <script src="js/script.js"></script>
+    </div>
+    <script src="../js/script.js"></script>
 </body>
 </html>
