--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vita Fit - Home</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
+
 <body>
     <div class="container">
+        <img src="../assets/img/logo_vitafit.png" alt="logo" width="300" height="300">
         <h1>Vita Fit</h1>
-        <h2>Fisico Center</h2>
-        <h3>UMA ACADEMIA PARA TODOS</h3>
+        <h3>Fisico Center</h3>
+        <h4>UMA ACADEMIA PARA TODOS</h4>
         <div class="buttons">
             <button onclick="window.location.href='../templates/register.html'">Fazer Pedido</button>
             <button onclick="window.location.href='../php/view_orders.php'">Visualizar Pedidos</button>
         </div>
     </div>
 </body>
+
 </html>
