--- a/templates/register.html
+++ b/templates/register.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="../assets/img/logo_vitafit.png" alt="logo" width="300" height="300">
         <h1>Vita Fit</h1>
         <h2>Fisico Center</h2>
         <h3>UMA ACADEMIA PARA TODOS</h3>
